# legacy-rarible-backend

./: .dockerignore  .env.el  .gitignore  .gitlab-ci.yml  Makefile  README.md  dune  dune-project  openapi.json  package-lock.json  rarible.opam
api-client/: .gitignore  .npmignore  openapitools.json  package-lock.json  package.json  tsconfig.json
app/: package.json  tsconfig.json
app/src/: App.vue
backend/: dune
backend/api/: api.ml  doc.ml  dune  errors.ml  kafka_openapi.ml  main_api.ml  openapi.html  openapi.ml  secp256k1.ml
backend/common/: balance.ml  contract_spec.ml  dune  let.ml  parameters.ml  rtypes.ml  storage_diff.ml  typed_mich.ml  types.ml  utils.ml
backend/crawler/: collection_daemon.ml  crawler.ml  crawler_config.ml  direct_crawl.ml  dune  metadata_daemon.ml  recrawl_ft.ml  recrawl_hen_royalties.ml  recrawl_nft.ml  recrawl_objkt.ml  recrawl_single.ml
backend/db/: api.ml  check_ledger.ml  clean_balance_updates.ml  config.ml  crawl.ml  db.ml  dune  extract_bigmap_id.ml  extract_metadata_id.ml  get.ml  metadata.ml  misc.ml  prefix_hash.ml  produce.ml  rarible_kafka.ml  update.ml  update_supply.ml  updates.ml  utils.ml
backend/permit/: dune  permit.ml
backend/script/: api_script.ml  dune  script.ml  script_js.ml  script_types.ml
config/: crawler_config.json  crawler_config_mainnet.json  crawler_config_tesnet.json  daemon_config_mainnet.json  kafka_config.json  permit_config.json
contracts/arl/: dune  exchange.arl  exchangeV2.arl  fa2.arl  fill.arl  matcher.arl  mt-private.arl  mt-public.arl  nft-private.arl  nft-public.arl  royalties.arl  transfer_manager.arl  transfer_proxy.arl  validator.arl
contracts/arl/nft/: exchangeV2.arl  fa2.arl
contracts/mligo/fa1/: dune  fa1.mligo
contracts/mligo/nft_single/: admin.ml  assets.ml  dune  fa2_interface.ml  fa2_nft_test.ml  fa2_nft_token.ml  fa2_operator_lib.ml  manager.ml  nft.ml  nft_storage.ml  nft_test.ml  simple_admin.ml  token_manager.ml  types.ml
contracts/nft/: dune  fa2_interface.ml  fa2_nft_asset.ml  fa2_nft_storage.ml  fa2_nft_token.ml  fa2_operator_lib.ml  fa2_permissions_descriptor.ml
deployment/: crawler_config.json
deployment/nginx/: rarible-api.nginx
deployment/scripts/: rarible-api.sh  rarible-crawler.sh  rarible-env.sh  rarible-git-update.sh
deployment/systemd/: rarible-api.service  rarible-crawler.service
docker/: Dockerfile  Dockerfile_bin  Dockerfile_deps  entrypoint.sh
kafka/: dune  producer.ml
public/: index.html
public/api/: kafka_openapi.json  openapi.json  openapi.yaml
public/kafka/: index.html  kafka_openapi.yaml
public/sdk/: index.html
public/sdk/assets/: search.js
public/sdk/interfaces/: Asset.html  Config.html  FA12AssetType.html  FTAssetType.html  FillOrderRequest.html  MultipleAssetType.html  NFTAssetType.html  OperationResult.html  OrderRaribleV2DataV1.html  Part.html  Permit.html  Provider.html  SellRequest.html  SignatureResult.html  StorageFA1_2.html  StorageFA2.html  TezosProvider.html  TransactionArg.html  TransferDestination.html  TransferProxies.html  UnknownTokenAssetType.html  XTZAssetType.html
scripts/: rarible.mlt  reset_royalties.sh
sdk/: base.ts  check-asset-type.ts  crypto.ts  fa2_nft.ts  fetch.ts  in_memory_provider.ts  index.html  package.json  rarible.ts  script.ts  temple_provider.ts  test.ts  tsconfig.json  typedoc.json  utils.ts  webpack.config.js
sdk/common/: balance.ts  base.ts  check-asset-type.ts  index.ts  verify.ts
sdk/config/: type.ts
sdk/contracts/: exchange.ts  exchangeV2.ts  fa1.ts  fill.ts  index.ts  matcher.ts  royalties.ts  transfer_manager.ts  transfer_proxy.ts  validator.ts
sdk/docs/: index.html
sdk/docs/assets/: search.js
sdk/docs/interfaces/: FA2AssetType.html  OperationResult.html  OrderRaribleV2DataV1.html  Part.html  Provider.html  StorageFA1_2.html  StorageFA2.html  TezosProvider.html  TransactionArg.html
sdk/main/: index.ts  rarible.ts  script.ts  test-web.ts  test.ts
sdk/nft/: burn.ts  contract-metadata.ts  deploy.ts  fa2.ts  index.ts  mint.ts  mt-private.ts  mt-public.ts  nft-private.ts  nft-public.ts  permit.ts  royalties.ts  transfer.ts
sdk/order/: add-fee.ts  approve.ts  bid.ts  cancel.ts  check-asset-type.ts  fill-order.ts  get-make-fee.ts  index.ts  invert-order.ts  is-nft.ts  sell.ts  sign-order.ts  upsert-order.ts  utils.ts
sdk/providers/beacon/: beacon_provider.ts
sdk/providers/in_memory/: in_memory_provider.ts
sdk/providers/kukai/: kukai_provider.ts
sdk/providers/temple/: temple_provider.ts
sdk/test/: test-web.ts  test.ts
sdk/www/: config.json  index.html
src/api/: api.ml  doc.ml  dune  kafka_openapi.ml  main_api.ml
src/common/: contract_spec.ml  dune  let.ml  parameters.ml  rtypes.ml  storage_diff.ml  typed_mich.ml  utils.ml
src/crawler/: collection_daemon.ml  crawler_config.ml  dune  recrawl_ft.ml  recrawl_nft.ml  recrawl_objkt.ml
src/db/: api.ml  config.ml  converters.sexp  crawl.ml  db.ml  dune  extract_bigmap_id.ml  fetch_off_royalties.ml  get.ml  metadata.ml  produce.ml  update.ml  update_supply.ml  updates.ml  utils.ml
src/permit/: dune  permit.ml
src/script/: api_script.ml  dune  script_js.ml
src/tools/: check_ledger.ml  collection_daemon.ml  continuation_check.ml  dune  extract_bigmap_id.ml  fetch_off_royalties.ml  fix_balances.ml  fix_bug_crawlori.ml  metadata_daemon.ml  prefix_hash.ml  recrawl_creators.ml  recrawl_exchange.ml  recrawl_ft.ml  recrawl_nft.ml  recrawl_objkt.ml
