(library
 (name api)
 (modules api errors)
 (preprocess (pps ez_api.ppx))
 (libraries db let rtypes ez_api.server))

(executable
 (name main_api)
 (modules main_api)
 (preprocess (pps ez_api.ppx_server))
 (libraries api))

(executable
 (name openapi)
 (modules doc openapi)
 (libraries api ez_api.openAPI))

(executable
 (name kafka_openapi)
 (modules kafka_openapi)
 (preprocess (pps ez_api.ppx))
 (libraries api ez_api.openAPI))

(rule
 (deps openapi.exe)
 (targets openapi.yaml)
 (action (with-stdout-to %{targets}
          (run %{project_root}/backend/api/openapi.exe --title "Tezos Rarible API" --version "0.1" --yaml))))

(rule
 (deps kafka_openapi.exe)
 (targets kafka_openapi.yaml)
 (action (with-stdout-to %{targets}
          (run %{project_root}/backend/api/kafka_openapi.exe --title "Tezos Rarible Kafka Types" --version "0.1" -o "kafka_openapi" --yaml))))
