(library
 (name api)
 (modules api errors kafka_openapi)
 (preprocess (pps ppx_deriving_encoding ez_api.ppx_err_case ez_api.ppx))
 (libraries db let rtypes ez_api.server))

(executable
 (name main_api)
 (modules main_api)
 (preprocess (pps ez_api.ppx_server))
 (libraries api))

(executable
 (name openapi)
 (modules doc openapi)
 (libraries api ez_api.openAPI))

(rule
 (deps openapi.exe)
 (targets openapi.yaml)
 (action (with-stdout-to %{targets}
          (run %{project_root}/backend/api/openapi.exe --title "Tezos Rarible API" --version "0.1" --yaml))))
