(library
 (name crawler_config)
 (modules crawler_config)
 (package rarible)
 (libraries crawlori db))

(executable
 (name crawler)
 (modules crawler)
 (libraries crawler_config db updates ez_api.icurl_lwt))

(executable
 (name recrawl_ft)
 (modules recrawl_ft)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name recrawl_nft)
 (modules recrawl_nft)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name metadata_daemon)
 (modules metadata_daemon)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name collection_daemon)
 (modules collection_daemon)
 (preprocess (pps ppx_deriving_encoding))
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name direct_crawl)
 (modules direct_crawl)
 (preprocessor_deps (env_var "PGDATABASE") ../db/.rarible_witness)
 (preprocess (pps pgocaml_ppx))
 (libraries crawler_config ez_api.icurl_lwt))

(executable
 (name recrawl_hen_royalties)
 (modules recrawl_hen_royalties)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name recrawl_objkt)
 (modules recrawl_objkt)
 (libraries crawler_config db ez_api.icurl_lwt))
