(rule (action (write-file db_env.ml "
let database = \"%{env:PGDATABASE=rarible}\"
let no_update = true")))

(library
 (name db_env_rarible)
 (modules db_env)
 (implements crawlori.db_env))

(executable
 (name update)
 (modules update)
 (libraries db_env_rarible ez_pgocaml crawlori.versions crawlori.config))

(rule
 (deps update.exe)
 (targets .rarible_witness)
 (action (with-stdout-to %{targets} (run %{project_root}/backend/db/update.exe))))

(library
 (name db)
 (modules db rarible_kafka)
 (preprocessor_deps (env_var "PGDATABASE") .rarible_witness)
 (preprocess (pps pgocaml_ppx))
 (libraries db_env_rarible crawlori.pg common lwt kafka kafka_lwt))


(executable
 (name extract_metadata_id)
 (modules extract_metadata_id)
 (libraries db ez_api.icurl_lwt))
