(library
 (public_name rarible.script)
 (modules script)
 (name script)
 (libraries unix hex))

(library
 (name script_js)
 (package rarible)
 (modules script_js)
 (libraries script tzfunc))

(executable
 (public_name rarible.api_script)
 (modules api_script)
 (name api_script)
 (libraries script fmt api script_js ez_api.icurl_lwt ez_api.icurl))
