(library
 (name secp256k1)
 (modules secp256k1)
 (libraries secp256k1-internal tzfunc))

(library
 (name api)
 (modules api errors kafka_openapi)
 (preprocess (pps ppx_deriving_encoding ez_api.ppx_err_case ez_api.ppx))
 (libraries db let rtypes ez_api.server secp256k1))

(executable
 (name main_api)
 (modules main_api)
 (preprocess (pps ez_api.ppx_server))
 (libraries api ez_api.icurl_lwt))

(executable
 (name openapi)
 (modules doc openapi)
 (libraries api ez_api.openAPI))

(rule
 (deps openapi.exe)
 (targets openapi.yaml)
 (action (with-stdout-to %{targets}
          (run %{project_root}/src/api/openapi.exe --title "Tezos Rarible API" --version "0.1" --yaml))))
