(library
 (name rtypes)
 (package rarible)
 (modules rtypes)
 (preprocess (pps ppx_deriving_encoding))
 (libraries zarith tzfunc))

(library
 (name let)
 (package rarible)
 (modules let)
 (libraries crawlori rtypes))

(library
 (name common)
 (package rarible)
 (modules typed_mich utils parameters contract_spec storage_diff balance)
 (libraries let ezjsonm))
