(rule (action (write-file db_env.ml "
let database = \"%{env:PGDATABASE=rarible}\"
let no_update = true")))

(library
 (name db_env_rarible)
 (modules db_env)
 (implements crawlori.db_env))

(library
 (name updates)
 (modules updates)
 (libraries db_env_rarible ez_pgocaml crawlori.versions))

(executable
 (name update)
 (modules update)
 (libraries updates crawlori.config))

(rule
 (deps update.exe)
 (targets .rarible_witness)
 (action (with-stdout-to %{targets} (run %{project_root}/src/db/update.exe))))

(library
 (name db)
 (modules rarible_kafka misc config get produce metadata crawl api utils db)
 (preprocessor_deps (env_var "PGDATABASE") .rarible_witness)
 (preprocess (pps pgocaml_ppx))
 (libraries db_env_rarible crawlori.pg common lwt kafka kafka_lwt))

(executable
 (name extract_bigmap_id)
 (modules extract_bigmap_id)
 (libraries db ez_api.icurl_lwt))

(executable
 (name check_ledger)
 (modules check_ledger)
 (libraries db ez_api.icurl_lwt))

(executable
 (name update_supply)
 (modules update_supply)
 (libraries db))

(executable
 (name prefix_hash)
 (modules prefix_hash)
 (libraries db))

(executable
 (name clean_balance_updates)
 (modules clean_balance_updates)
 (libraries db))
