(executable
 (name extract_bigmap_id)
 (modules extract_bigmap_id)
 (libraries db ez_api.icurl_lwt))

(executable
 (name check_ledger)
 (modules check_ledger)
 (libraries db ez_api.icurl_lwt))

(executable
 (name update_supply)
 (modules update_supply)
 (libraries db))

(executable
 (name prefix_hash)
 (modules prefix_hash)
 (libraries db))

(executable
 (name clean_balance_updates)
 (modules clean_balance_updates)
 (libraries db))

(executable
 (name fetch_off_royalties)
 (modules fetch_off_royalties)
 (preprocessor_deps (env_var "PGDATABASE") ../db/.rarible_witness)
 (preprocess (pps pgocaml_ppx))
 (libraries db ez_api.icurl_lwt))

(executable
 (name recrawl_ft)
 (modules recrawl_ft)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name recrawl_nft)
 (modules recrawl_nft)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name metadata_daemon)
 (modules metadata_daemon)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name collection_daemon)
 (modules collection_daemon)
 (preprocess (pps ppx_deriving_encoding))
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name direct_crawl)
 (modules direct_crawl)
 (preprocessor_deps (env_var "PGDATABASE") ../db/.rarible_witness)
 (preprocess (pps pgocaml_ppx))
 (libraries crawler_config ez_api.icurl_lwt))

(executable
 (name recrawl_objkt)
 (modules recrawl_objkt)
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name recrawl_creators)
 (modules recrawl_creators)
 (preprocessor_deps (env_var "PGDATABASE") ../db/.rarible_witness)
 (preprocess (pps pgocaml_ppx))
 (libraries crawler_config db ez_api.icurl_lwt))

(executable
 (name fix_bug_crawlori)
 (modules fix_bug_crawlori)
 (preprocess (pps pgocaml_ppx))
 (libraries db ez_api.icurl_lwt))
