(library
 (name fa2_nft_storage)
 (modules
   fa2_errors
   fa2_interface
   fa2_nft_asset
   fa2_nft_storage
   fa2_nft_token
   fa2_operator_lib
   fa2_permissions_descriptor
   admin
   token_manager
   fa2_nft_storage)
 (preprocess (pps mligo.ppx)))

(rule
 (deps
   fa2_errors.ml
   fa2_interface.ml
   fa2_nft_asset.ml
   fa2_nft_storage.ml
   fa2_nft_token.ml
   fa2_operator_lib.ml
   fa2_permissions_descriptor.ml
   admin.ml
   token_manager.ml
   fa2_nft_storage.ml
   fa2_nft_test.ml)
 (targets
   fa2_errors.mligo
   fa2_interface.mligo
   fa2_nft_asset.mligo
   fa2_nft_storage.mligo
   fa2_nft_token.mligo
   fa2_operator_lib.mligo
   fa2_permissions_descriptor.mligo
   admin.mligo
   token_manager.mligo
   fa2_nft_storage.mligo
   fa2_nft_test.mligo)
 (action
   (progn
    (run to_mligo fa2_nft_storage.ml)
    (run to_mligo fa2_nft_test.ml))))

(rule
 (alias runtest)
 (deps fa2_nft_asset.mligo)
 (action (with-stdout-to fa2_nft_asset.tz (run ligo compile-contract fa2_nft_asset.mligo nft_asset_main))))

(rule
 (alias runtest)
 (deps fa2_nft_storage.mligo)
 (action (with-stdout-to fa2_nft_storage.tz (run ligo compile-storage fa2_nft_storage.mligo nft_asset_main store))))

; (rule
;  (deps
;    fa2_errors.ml
;    fa2_interface.ml
;    fa2_nft_asset.ml
;    fa2_nft_storage.ml
;    fa2_nft_token.ml
;    fa2_operator_lib.ml
;    fa2_permissions_descriptor.ml
;    admin.ml
;    token_manager.ml)
;  (targets nft_interface.ml)
;  (action (run mligo_interface -s -o nft_interface.ml fa2_nft_storage.ml)))

; (rule
;  (deps
;    fa2_errors.ml
;    fa2_interface.ml
;    fa2_nft_asset.ml
;    fa2_nft_storage.ml
;    fa2_nft_token.ml
;    fa2_operator_lib.ml
;    fa2_permissions_descriptor.ml
;    admin.ml
;    token_manager.ml)
;  (targets nft_tzfunc.ml)
;  (action (run mligo_interface -o nft_tzfunc.ml fa2_nft_storage.ml)))

; (library
;  (name nft_interface)
;  (modules nft_interface)
;  (libraries fa2_nft_storage mligo.unix))

; (library
;  (name nft_tzfunc)
;  (optional)
;  (modules nft_tzfunc)
;  (libraries fa2_nft_storage mligo.tzfunc))
